Add desktop toolbar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <div class="menu_item"></div>
         <div class="menu_item"></div>
       </nav>
+      <nav class="desktop_menu">
+        <a class="d_menu_item" href="#">Portfolio</a>
+        <a class="d_menu_item" href="#">About</a>
+        <a class="d_menu_item" href="#">Contact</a> 
+        <a class="d_menu_item fa-envelope-o fa-lg toolicon fa" href="#"></a>       
+      </nav>
     </header>
     <section class="headline">
       <div class="intro">
