Add desktop recentwork design

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <nav class="desktop_menu">
         <a class="d_menu_item" href="#">Portfolio</a>
         <a class="d_menu_item" href="#">About</a>
-        <a class="d_menu_item" href="#">Contact</a> 
-        <a class="d_menu_item fa-envelope-o fa-lg toolicon fa" href="#"></a>       
+        <a class="d_menu_item" href="#">Contact</a>
+        <a class="d_menu_item fa-envelope-o fa-lg toolicon fa" href="#"></a>
       </nav>
     </header>
     <section class="headline">
@@ -49,9 +49,15 @@
     </section>
     <section class="works">
       <div class="recentworkContainer">
-        <h1 class="recentWork">My Recent Work</h1>
-        <div class="line"></div>
-        <img src="images/recentWork.png" alt="the photo of my recent project" />
+        <span class="recentWorkSectionTitle">
+          <h1 class="recentWork">My Recent Work</h1>
+          <div class="line"></div>
+        </span>
+        <img
+          class="recentWorkPic"
+          src="images/recentWork.png"
+          alt="the photo of my recent project"
+        />
         <h3 class="recentWorkTitle">Multi-Post Stories</h3>
         <p class="recentWorkDesc">
           A daily selection of privately personalized reads; no accounts or
@@ -66,107 +72,109 @@
         </ul>
         <button class="mybtn" type="button">See Project</button>
       </div>
-      <div class="workCard">
-        <div class="workCardContent">
-          <h3 class="recentWorkTitle wc">
-            Profesional Art <br />Printing Data
-          </h3>
-          <p class="recentWorkDesc wc">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul class="usedTechs wc">
-            <li class="tech twc">HTML</li>
-            <li class="tech twc">Bootstrap</li>
-            <li class="tech twc">Ruby</li>
-          </ul>
+      <div class="workCards">
+        <div class="workCard">
+          <div class="workCardContent">
+            <h3 class="recentWorkTitle wc">
+              Profesional Art <br />Printing Data
+            </h3>
+            <p class="recentWorkDesc wc">
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required. has been the industry's standard
+            </p>
+            <ul class="usedTechs wc">
+              <li class="tech twc">HTML</li>
+              <li class="tech twc">Bootstrap</li>
+              <li class="tech twc">Ruby</li>
+            </ul>
+          </div>
+          <button class="mybtn spwc" type="button">See Project</button>
         </div>
-        <button class="mybtn spwc" type="button">See Project</button>
-      </div>
-      <div class="workCard">
-        <div class="workCardContent">
-          <h3 class="recentWorkTitle wc">
-            Profesional Art <br />Printing Data
-          </h3>
-          <p class="recentWorkDesc wc">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul class="usedTechs wc">
-            <li class="tech twc">HTML</li>
-            <li class="tech twc">Bootstrap</li>
-            <li class="tech twc">Ruby</li>
-          </ul>
+        <div class="workCard">
+          <div class="workCardContent">
+            <h3 class="recentWorkTitle wc">
+              Profesional Art <br />Printing Data
+            </h3>
+            <p class="recentWorkDesc wc">
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required. has been the industry's standard
+            </p>
+            <ul class="usedTechs wc">
+              <li class="tech twc">HTML</li>
+              <li class="tech twc">Bootstrap</li>
+              <li class="tech twc">Ruby</li>
+            </ul>
+          </div>
+          <button class="mybtn spwc" type="button">See Project</button>
         </div>
-        <button class="mybtn spwc" type="button">See Project</button>
-      </div>
-      <div class="workCard">
-        <div class="workCardContent">
-          <h3 class="recentWorkTitle wc">
-            Profesional Art <br />Printing Data
-          </h3>
-          <p class="recentWorkDesc wc">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul class="usedTechs wc">
-            <li class="tech twc">HTML</li>
-            <li class="tech twc">Bootstrap</li>
-            <li class="tech twc">Ruby</li>
-          </ul>
+        <div class="workCard">
+          <div class="workCardContent">
+            <h3 class="recentWorkTitle wc">
+              Profesional Art <br />Printing Data
+            </h3>
+            <p class="recentWorkDesc wc">
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required. has been the industry's standard
+            </p>
+            <ul class="usedTechs wc">
+              <li class="tech twc">HTML</li>
+              <li class="tech twc">Bootstrap</li>
+              <li class="tech twc">Ruby</li>
+            </ul>
+          </div>
+          <button class="mybtn spwc" type="button">See Project</button>
         </div>
-        <button class="mybtn spwc" type="button">See Project</button>
-      </div>
-      <div class="workCard">
-        <div class="workCardContent">
-          <h3 class="recentWorkTitle wc">
-            Profesional Art <br />Printing Data
-          </h3>
-          <p class="recentWorkDesc wc">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul class="usedTechs wc">
-            <li class="tech twc">HTML</li>
-            <li class="tech twc">Bootstrap</li>
-            <li class="tech twc">Ruby</li>
-          </ul>
+        <div class="workCard">
+          <div class="workCardContent">
+            <h3 class="recentWorkTitle wc">
+              Profesional Art <br />Printing Data
+            </h3>
+            <p class="recentWorkDesc wc">
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required. has been the industry's standard
+            </p>
+            <ul class="usedTechs wc">
+              <li class="tech twc">HTML</li>
+              <li class="tech twc">Bootstrap</li>
+              <li class="tech twc">Ruby</li>
+            </ul>
+          </div>
+          <button class="mybtn spwc" type="button">See Project</button>
         </div>
-        <button class="mybtn spwc" type="button">See Project</button>
-      </div>
-      <div class="workCard">
-        <div class="workCardContent">
-          <h3 class="recentWorkTitle wc">
-            Profesional Art <br />Printing Data
-          </h3>
-          <p class="recentWorkDesc wc">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul class="usedTechs wc">
-            <li class="tech twc">HTML</li>
-            <li class="tech twc">Bootstrap</li>
-            <li class="tech twc">Ruby</li>
-          </ul>
+        <div class="workCard">
+          <div class="workCardContent">
+            <h3 class="recentWorkTitle wc">
+              Profesional Art <br />Printing Data
+            </h3>
+            <p class="recentWorkDesc wc">
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required. has been the industry's standard
+            </p>
+            <ul class="usedTechs wc">
+              <li class="tech twc">HTML</li>
+              <li class="tech twc">Bootstrap</li>
+              <li class="tech twc">Ruby</li>
+            </ul>
+          </div>
+          <button class="mybtn spwc" type="button">See Project</button>
         </div>
-        <button class="mybtn spwc" type="button">See Project</button>
-      </div>
-      <div class="workCard">
-        <div class="workCardContent">
-          <h3 class="recentWorkTitle wc">
-            Profesional Art <br />Printing Data
-          </h3>
-          <p class="recentWorkDesc wc">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul class="usedTechs wc">
-            <li class="tech twc">HTML</li>
-            <li class="tech twc">Bootstrap</li>
-            <li class="tech twc">Ruby</li>
-          </ul>
+        <div class="workCard">
+          <div class="workCardContent">
+            <h3 class="recentWorkTitle wc">
+              Profesional Art <br />Printing Data
+            </h3>
+            <p class="recentWorkDesc wc">
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required. has been the industry's standard
+            </p>
+            <ul class="usedTechs wc">
+              <li class="tech twc">HTML</li>
+              <li class="tech twc">Bootstrap</li>
+              <li class="tech twc">Ruby</li>
+            </ul>
+          </div>
+          <button class="mybtn spwc" type="button">See Project</button>
         </div>
-        <button class="mybtn spwc" type="button">See Project</button>
       </div>
     </section>
     <section class="aboutme">
