Add aboutme desktop design

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           you need coded, don’t hestiate to contact me.
         </p>
       </div>
-      <ul class="social_media">
+      <ul class="social_media social_media_desktop">
         <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
         <li class="fa fa-github fa-2x"><a href="#"></a></li>
         <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
@@ -178,17 +178,20 @@
       </div>
     </section>
     <section class="aboutme">
-      <h3 class="aboutmeTitle">About me</h3>
-      <p class="aboutmeDesc recentWorkDesc wc">
-        Hello I’m a software developer! I can help you build a product , feature
-        or website Look through some of my work and experience! If you like what
-        you see and have a project you need coded, don’t hestiate to contact me.
-      </p>
-      <button class="mybtn getResume" type="button">Get My Resume</button>
+      <div class="aboutmeWrapper">
+        <h3 class="aboutmeTitle">About me</h3>
+        <p class="aboutmeDesc recentWorkDesc wc">
+          Hello I’m a software developer! I can help you build a product ,
+          feature or website Look through some of my work and experience! If you
+          like what you see and have a project you need coded, don’t hestiate to
+          contact me.
+        </p>
+        <button class="mybtn getResume" type="button">Get My Resume</button>
+      </div>
       <div class="line ab"></div>
 
       <ul class="skillContainer">
-        <li class="skillCategory">
+        <li class="skillCategory skillTitle">
           <div class="bullets language"></div>
           <h1>Language</h1>
         </li>
@@ -200,7 +203,7 @@
             <li class="subSkill">CSS</li>
           </ul>
         </li>
-        <li class="skillCategory">
+        <li class="skillCategory skillTitle">
           <div class="bullets"></div>
           <h1>Frameworks</h1>
         </li>
@@ -213,7 +216,7 @@
             <li class="subSkill">Selenium</li>
           </ul>
         </li>
-        <li class="skillCategory">
+        <li class="skillCategory skillTitle">
           <div class="circle"></div>
           <h1>Skills</h1>
         </li>
