Resolve linters' errors

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     </section>
     <section class="works">
       <div class="recentworkContainer">
-        <span class="recentWorkSectionTitle">
+        <div class="recentWorkSectionTitle">
           <h1 class="recentWork">My Recent Work</h1>
           <div class="line"></div>
-        </span>
+        </div>
         <img
           class="recentWorkPic"
           src="images/recentWork.png"
