--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         </p>
       </div>
       <ul class="social_media social_media_desktop">
-        <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
-        <li class="fa fa-github fa-2x"><a href="#"></a></li>
-        <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
-        <li class="fa fa-facebook fa-2x"><a href="#"></a></li>
-        <li class="fa fa-youtube fa-2x"><a href="#"></a></li>
+        <li class=""><a href="#"> <i class="fa fa-linkedin fa-2x"></i></a></li>
+        <li class=""><a href="#"><i class="fa fa-github fa-2x"></i></a></li>
+        <li class=""><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
+        <li class=""><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
+        <li class=""><a href="#"><i class="fa fa-youtube fa-2x"></i></a></li>
       </ul>
     </section>
     <section class="works">
@@ -275,11 +275,11 @@
     </section>
     <footer class="myfooter">
       <ul class="social_media">
-        <li class="fa fa-linkedin fa-2x"><a href="#"></a></li>
-        <li class="fa fa-github fa-2x"><a href="#"></a></li>
-        <li class="fa fa-twitter fa-2x"><a href="#"></a></li>
-        <li class="fa fa-facebook fa-2x"><a href="#"></a></li>
-        <li class="fa fa-youtube fa-2x"><a href="#"></a></li>
+        <li class=""><a href="#"> <i class="fa fa-linkedin fa-2x"></i></a></li>
+        <li class=""><a href="#"><i class="fa fa-github fa-2x"></i></a></li>
+        <li class=""><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
+        <li class=""><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
+        <li class=""><a href="#"><i class="fa fa-youtube fa-2x"></i></a></li>
       </ul>
       <div class="footerLine"></div>
     </footer>
