--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5G2KZ3C8PX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){window.dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5G2KZ3C8PX');
+  </script>
   <body class="container">
     <header class="toolbar">
       <a class="name" href="#">Wahid Shadab</a>
