Resolve linters' errors

--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-5G2KZ3C8PX"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        window.dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-5G2KZ3C8PX");
+    </script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
@@ -11,14 +24,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5G2KZ3C8PX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){window.dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-5G2KZ3C8PX');
-  </script>
   <body class="container">
     <header class="toolbar">
       <a class="name" href="#">Wahid Shadab</a>
@@ -48,11 +53,21 @@
         </p>
       </div>
       <ul class="social_media social_media_desktop">
-        <li class=""><a href="#"> <i class="fa fa-linkedin fa-2x"></i></a></li>
-        <li class=""><a href="#"><i class="fa fa-github fa-2x"></i></a></li>
-        <li class=""><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-        <li class=""><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
-        <li class=""><a href="#"><i class="fa fa-youtube fa-2x"></i></a></li>
+        <li class="">
+          <a href="#"> <i class="fa fa-linkedin fa-2x"></i></a>
+        </li>
+        <li class="">
+          <a href="#"><i class="fa fa-github fa-2x"></i></a>
+        </li>
+        <li class="">
+          <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+        </li>
+        <li class="">
+          <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
+        </li>
+        <li class="">
+          <a href="#"><i class="fa fa-youtube fa-2x"></i></a>
+        </li>
       </ul>
     </section>
     <section class="works">
@@ -283,11 +298,21 @@
     </section>
     <footer class="myfooter">
       <ul class="social_media">
-        <li class=""><a href="#"> <i class="fa fa-linkedin fa-2x"></i></a></li>
-        <li class=""><a href="#"><i class="fa fa-github fa-2x"></i></a></li>
-        <li class=""><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-        <li class=""><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
-        <li class=""><a href="#"><i class="fa fa-youtube fa-2x"></i></a></li>
+        <li class="">
+          <a href="#"> <i class="fa fa-linkedin fa-2x"></i></a>
+        </li>
+        <li class="">
+          <a href="#"><i class="fa fa-github fa-2x"></i></a>
+        </li>
+        <li class="">
+          <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+        </li>
+        <li class="">
+          <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
+        </li>
+        <li class="">
+          <a href="#"><i class="fa fa-youtube fa-2x"></i></a>
+        </li>
       </ul>
       <div class="footerLine"></div>
     </footer>
