--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
-  <body class="container">
+  <body tabindex="0" class="container">
     <header class="toolbar">
       <a class="name" href="#">Wahid Shadab</a>
       <nav class="menu">
