Add accessibility to My works and footer

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <button class="mybtn" type="button">See Project</button>
       </div>
       <div class="workCards">
-        <div class="workCard">
+        <div class="workCard" tabindex="0">
           <div class="workCardContent">
             <h3 class="recentWorkTitle wc">
               Profesional Art <br />Printing Data
@@ -113,7 +113,7 @@
           </div>
           <button class="mybtn spwc" type="button">See Project</button>
         </div>
-        <div class="workCard">
+        <div class="workCard" tabindex="0">
           <div class="workCardContent">
             <h3 class="recentWorkTitle wc">
               Profesional Art <br />Printing Data
@@ -130,7 +130,7 @@
           </div>
           <button class="mybtn spwc" type="button">See Project</button>
         </div>
-        <div class="workCard">
+        <div class="workCard" tabindex="0">
           <div class="workCardContent">
             <h3 class="recentWorkTitle wc">
               Profesional Art <br />Printing Data
@@ -147,7 +147,7 @@
           </div>
           <button class="mybtn spwc" type="button">See Project</button>
         </div>
-        <div class="workCard">
+        <div class="workCard" tabindex="0">
           <div class="workCardContent">
             <h3 class="recentWorkTitle wc">
               Profesional Art <br />Printing Data
@@ -164,7 +164,7 @@
           </div>
           <button class="mybtn spwc" type="button">See Project</button>
         </div>
-        <div class="workCard">
+        <div class="workCard" tabindex="0">
           <div class="workCardContent">
             <h3 class="recentWorkTitle wc">
               Profesional Art <br />Printing Data
@@ -181,7 +181,7 @@
           </div>
           <button class="mybtn spwc" type="button">See Project</button>
         </div>
-        <div class="workCard">
+        <div class="workCard" tabindex="0">
           <div class="workCardContent">
             <h3 class="recentWorkTitle wc">
               Profesional Art <br />Printing Data
