--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script type="text/javascript" src="index.js"></script>
     <title>Wahidullah's Portfolio</title>
     <link
       rel="stylesheet"
