--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script type="text/javascript" src="index.js"></script>
     <title>Wahidullah's Portfolio</title>
     <link
       rel="stylesheet"
@@ -28,11 +27,17 @@
   <body tabindex="0" class="container">
     <header class="toolbar">
       <a class="name" href="#">Wahid Shadab</a>
-      <nav class="menu">
-        <div class="menu_item"></div>
-        <div class="menu_item"></div>
-        <div class="menu_item"></div>
-      </nav>
+      <!-- SERGIO START -->
+      <div class="menu-btn">
+        <div class="menuBtn__burger"></div>
+      </div>
+      <script src="index.js"></script>
+      <ul class="menu">
+        <li><a class="menuLink" href="#works">Portfolio</a></li>
+        <li><a class="menuLink" href="#aboutme">About</a></li>
+        <li><a class="menuLink" href="#contactMe">Contact</a></li>
+      </ul>
+      <!-- SERGIO END -->
       <nav class="desktop_menu">
         <a class="d_menu_item" href="#">Portfolio</a>
         <a class="d_menu_item" href="#">About</a>
@@ -71,7 +76,7 @@
         </li>
       </ul>
     </section>
-    <section class="works">
+    <section class="works" id="works">
       <div class="recentworkContainer">
         <div class="recentWorkSectionTitle">
           <h1 class="recentWork">My Recent Work</h1>
@@ -201,7 +206,7 @@
         </div>
       </div>
     </section>
-    <section class="aboutme">
+    <section class="aboutme" id="aboutme">
       <div class="aboutmeWrapper">
         <h3 class="aboutmeTitle">About me</h3>
         <p class="aboutmeDesc recentWorkDesc wc">
@@ -255,7 +260,7 @@
         </li>
       </ul>
     </section>
-    <section class="contactMe">
+    <section class="contactMe" id="contactMe">
       <h3 class="contactDesc">
         I'm always <br />
         interested in hearing about new projects, so if you'd like to chat
