Add a functional mobile menu

--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
         <div class="menuBtn__burger"></div>
       </div>
       <script src="index.js"></script>
-      <ul class="menu">
-        <li><a class="menuLink" href="#works">Portfolio</a></li>
-        <li><a class="menuLink" href="#aboutme">About</a></li>
-        <li><a class="menuLink" href="#contactMe">Contact</a></li>
-      </ul>
       <!-- SERGIO END -->
       <nav class="desktop_menu">
         <a class="d_menu_item" href="#">Portfolio</a>
@@ -46,6 +41,11 @@
       </nav>
     </header>
     <section class="headline">
+      <ul class="menuitem">
+        <li class="menuitem"><a class="menuLink" href="#works">Portfolio</a></li>
+        <li class="menuitem"><a class="menuLink" href="#aboutme">About</a></li>
+        <li class="menuitem"><a class="menuLink" href="#contactMe">Contact</a></li>
+      </ul>
       <div class="intro">
         <h3 class="hey">
           Hey there <br />
