--- a/index.html
+++ b/index.html
@@ -31,21 +31,24 @@
       <div class="menu-btn">
         <div class="menuBtn__burger"></div>
       </div>
-      <script src="index.js"></script>
-      <!-- SERGIO END -->
+      <ul class="menuitem">
+        <li><a class="menuLink" href="#works">Portfolio</a></li>
+        <li><hr></li>
+        <li><a class="menuLink" href="#aboutme">About</a></li>
+        <li><hr></li>
+        <li><a class="menuLink" href="#contactMe">Contact</a></li>
+        <li><hr></li>
+      </ul>
       <nav class="desktop_menu">
         <a class="d_menu_item" href="#">Portfolio</a>
         <a class="d_menu_item" href="#">About</a>
         <a class="d_menu_item" href="#">Contact</a>
         <a class="d_menu_item fa-envelope-o fa-lg toolicon fa" href="#"></a>
       </nav>
+      <script src="index.js"></script>
     </header>
+    <!-- SERGIO END -->
     <section class="headline">
-      <ul class="menuitem">
-        <li class="menuitem"><a class="menuLink" href="#works">Portfolio</a></li>
-        <li class="menuitem"><a class="menuLink" href="#aboutme">About</a></li>
-        <li class="menuitem"><a class="menuLink" href="#contactMe">Contact</a></li>
-      </ul>
       <div class="intro">
         <h3 class="hey">
           Hey there <br />
