Close menu when a user select an item

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       </nav>
       <nav class="menuexpand expand">
         <img src="images/close.png" alt="menu close button" class="closebtn expand">
-        <a class="d_menu_item" href="#">Portfolio</a>
+        <a class="d_menu_item expitem" href="#portfolio">Portfolio</a>
         <hr>
-        <a class="d_menu_item" href="#">About</a>
+        <a class="d_menu_item expitem" href="#about">About</a>
         <hr>
-        <a class="d_menu_item" href="#">Contact</a>
+        <a class="d_menu_item expitem" href="#contact">Contact</a>
         <hr>
       </nav>
       <nav class="desktop_menu">
@@ -80,7 +80,7 @@
         </li>
       </ul>
     </section>
-    <section class="works">
+    <section class="works" id="portfolio">
       <div class="recentworkContainer">
         <div class="recentWorkSectionTitle">
           <h1 class="recentWork">My Recent Work</h1>
@@ -210,7 +210,7 @@
         </div>
       </div>
     </section>
-    <section class="aboutme">
+    <section class="aboutme" id="about">
       <div class="aboutmeWrapper">
         <h3 class="aboutmeTitle">About me</h3>
         <p class="aboutmeDesc recentWorkDesc wc">
@@ -264,7 +264,7 @@
         </li>
       </ul>
     </section>
-    <section class="contactMe">
+    <section class="contactMe" id="contact">
       <h3 class="contactDesc">
         I'm always <br />
         interested in hearing about new projects, so if you'd like to chat
