--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script type="text/javascript" src="index.js" defer></script>
+    <script src="index.js" defer></script>
   </head>
   <body tabindex="0" class="container">
     <header class="toolbar">
