Change title for modal through JS

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <script src="index.js" defer></script>
   </head>
   <body tabindex="0" class="container">
-    <section class="popup">
+    <section class="popup" id="popup">
       <div class="popupWrapper">
-        <h1 class="popupTitle">Keeping track</h1>
+        <h1 class="popupTitle" id="popupTitle">Keeping track</h1>
         <p class="closebutn">&times;</p>
         <ul class="usedTechs span2c popupUsedTechs">
           <li class="tech">HTML</li>
@@ -37,7 +37,7 @@
         </ul>
         <img class="popupImage" src="images/recentWork.png" alt="The project screenshot" />
         <div class="popupBody">
-          <p class="popupDesc">
+          <p class="popupDesc" id="popupDesc">
             Lorem Ipsum is simply. Lorem Ipsum has been
             the industry's standard dummy text ever since the 1500s, when an
             unknown printer took a galley of type and scrambled it 1960s with
