Justify popup modal

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="index.js" defer></script>
   </head>
   <body tabindex="0" class="container">
-    <section class="popup expand" id="popup">
+    <section class="popup" id="popup">
       <div class="popupWrapper">
         <h1 class="popupTitle" id="popupTitle">Keeping track</h1>
         <p class="closebutn">&times;</p>
@@ -35,16 +35,26 @@
           <li class="tech">Bootstrap</li>
           <li class="tech">Ruby On Rails</li>
         </ul>
-        <img class="popupImage" src="images/recentWork.png" alt="The project screenshot" />
+        <img
+          class="popupImage"
+          src="images/recentWork.png"
+          alt="The project screenshot"
+        />
         <div class="popupBody">
           <p class="popupDesc" id="popupDesc">
-            Lorem Ipsum is simply. Lorem Ipsum has been
-            the industry's standard dummy text ever since the 1500s, when an
-            unknown printer took a galley of type and scrambled it 1960s with
-            the releax map lapora verita.
+            Lorem Ipsum is simply. Lorem Ipsum has been the industry's standard
+            dummy text ever since the 1500s, when an unknown printer took a
+            galley of type and scrambled it 1960s with the releax map lapora
+            verita.
           </p>
-          <button class="mybtn">See Live <img class="btnIcon" src="images/seelive.svg" alt=""></button>
-          <button class="mybtn">See Source <img src="images/seeSource.svg" alt=""> </button>
+          <div class="btns">
+            <button class="mybtn">
+              See Live <img class="btnIcon" src="images/seelive.svg" alt="" />
+            </button>
+            <button class="mybtn">
+              See Source <img src="images/seeSource.svg" alt="" />
+            </button>
+          </div>
         </div>
       </div>
     </section>
