Resolve linters' errors and Justify popup buttons

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img
           class="popupImage"
           id="popupImage"
-          src=""
+          src="#"
           alt="The project screenshot"
         />
         <div class="popupBody">
@@ -43,15 +43,14 @@
           </p>
           <div class="btns">
             <a href="#" id="livelink">
-              <button class="mybtn">
+              <div class="popupbtn mybtn">
                 See Live <img class="btnIcon" src="images/seelive.svg" alt="" />
-              </button>
-             
+              </div>
             </a>
             <a href="#" id="sourcelink">
-              <button class="mybtn">
+              <div class="popupbtn mybtn">
                 See Source <img src="images/seeSource.svg" alt="" />
-              </button>
+              </div>
             </a>
           </div>
         </div>
