Organise project folders

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     </script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Wahidullah's Portfolio</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="index.js" defer></script>
+    <script src="js/index.js" defer></script>
   </head>
   <body tabindex="0" class="container">
     <section class="popup expand" id="popup">
@@ -137,7 +137,7 @@
           <li class="tech">Bootstrap</li>
           <li class="tech">Ruby</li>
         </ul>
-        <button class="mybtn " id="recentbutton" type="button">See Project</button>
+        <button class="mybtn recentbtn" id="recentbutton" type="button">See Project</button>
       </div>
       <div class="workCards">
         <div class="workCard" tabindex="0">
